<resources>
    <string name="app_name">receitalegal</string>
    <string name="register_title">Create Account</string>
    <string name="register_name">Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm">Register</string>
    <string name="register_login">Already Registered ? Login</string>
    <string name="login_confirm">Login</string>
    <string name="login_new">New Here ? Create Account</string>
    <string name="login_title">Login</string>
    <string name="main_logout">Logout</string>
    <string name="userdash">mydashboard</string>
    <string name="userrecipe">Recipes</string>
    <string name="userrecipes">30 recipes</string>
    <string name="logout">logout</string>
    <string name="btnRecipes">Recipes</string>
    <string name="pantry">Pantry</string>
    <string name="descRecipe">TODO</string>
    <string name="recipename">Name</string>
    <string name="recipedescription">Description</string>
    <string name="recipeingredient1">Ingredient</string>
    <string name="recipeingredient3">Ingredient</string>
    <string name="recipeingredient2">Ingredient</string>
    <string name="recipehow_to">How to</string>

</resources>