<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/txtNameUser"
                android:text="@string/userdash"
                android:textSize="24sp"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <TextView
                android:layout_marginTop="6dp"
                android:layout_below="@+id/txtNameUser"
                android:text="@string/userrecipes"
                android:textSize="14sp"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <ImageView
                android:id="@+id/profile"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/splash_bg" />

            <TextView
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="6dp"
                android:onClick="logout"
                android:text="@string/logout"
                android:textColor="#000"
                android:textSize="14sp">

            </TextView>

        </RelativeLayout>

        <GridLayout
            android:columnCount="2"
            android:rowCount="3"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </GridLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerRecipe">
        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>


</ScrollView>